--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,10 @@ dependencies:
   firebase_auth: ^4.15.3
   firebase_messaging: ^14.7.9
   cloud_firestore: ^4.13.6
+  awesome_dialog: ^3.1.0
+  flutter_staggered_grid_view: ^0.7.0
+  intl: ^0.19.0
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
@@ -82,7 +86,7 @@ flutter:
   fonts:
     - family: tajawal
       fonts:
-        - asset: assets/fonts/Tajawal.ttf
+        - asset: assets/fonts/Cairo.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
