--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,19 +26,17 @@ environment:
 
 
 
-
 dependencies:
   flutter:
     sdk: flutter
 
 
   
-  
   cupertino_icons: ^1.0.2
   get: ^4.6.6
   firebase_core: ^2.24.2
   firebase_auth: ^4.15.3
-  cloud_firestore: ^4.13.6
+  cloud_firestore: ^4.15.4
   awesome_dialog: ^3.1.0
   flutter_staggered_grid_view: ^0.7.0
   intl: ^0.19.0
@@ -49,7 +47,15 @@ dependencies:
   image_picker: ^1.0.7
   image_cropper: ^5.0.1
   flutter_native_splash: ^2.3.10
+  flutter_launcher_icons: ^0.13.1
   
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/icon.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
+ 
 
 
 flutter_native_splash:
@@ -68,7 +74,7 @@ dev_dependencies:
   
   
   
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
 
 
 
